V 0.945 Single Resource Booking

--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -10,6 +10,7 @@
     "partnerInfo": "Info Partner",
     "teamMembers": "Membri del Team",
     "myBookings": "Prenotazioni",
+    "ganttBookings": "Vista Gantt",
     "partnerMember": "Membro Partner",
     "systemAdmin": "Amministratore di Sistema",
     "partnerAdmin": "Amministratore Partner",
@@ -186,9 +187,45 @@
     "operatingCalendar": "Calendario Operativo",
     "manageOperatingCalendar": "Gestisci Calendario Operativo",
     "operatingCalendarDescription": "Configura quando le tue sedi e risorse sono disponibili per le prenotazioni",
-    "invoices": "Fatture Powercowo"
+    "invoices": "Fatture Powercowo",
+    "manageResourceTypes": "Gestisci Tipi di Risorsa",
+    "addType": "Aggiungi Tipo",
+    "typeName": "Nome Tipo",
+    "typeCode": "Codice Tipo",
+    "editType": "Modifica Tipo",
+    "manageResources": "Gestisci Risorse",
+    "addResource": "Aggiungi Risorsa",
+    "deleteType": "Elimina Tipo",
+    "deleteTypeConfirm": "Sei sicuro di voler eliminare il tipo '{{name}}'?",
+    "cannotDeleteSystemType": "Impossibile eliminare i tipi di sistema.",
+    "errorLoadingTypes": "Errore nel caricamento dei tipi di risorsa",
+    "errorDeletingType": "Errore nell'eliminazione del tipo di risorsa",
+    "resourceTypes": "Tipi di Risorsa",
+    "customTypeLabel": "Codice Personalizzato",
+    "resourceType": "Tipo di Risorsa",
+    "otherCustom": "Altro / Personalizzato",
+    "quantityGranularHint": "Per risorse specifiche, mantieni quantità 1. Per pool, aumenta numero.",
+    "resourceName": "Nome Risorsa",
+    "type": "Tipo",
+    "deleteResourceTypes": "Elimina Risorsa",
+    "deleteResourceConfirm": "Sei sicuro di voler eliminare la risorsa '{{name}}'?",
+    "errorDeletingResource": "Errore eliminazione risorsa",
+    "errorLoadingResources": "Errore caricamento risorse",
+    "resourceTypeRequired": "Il tipo di risorsa è obbligatorio",
+    "location": "Sede",
+    "quantity": "Quantità",
+    "editResource": "Modifica Risorsa",
+    "description": "Descrizione"
   },
   "locations": {
+    "deleteResourceConfirmMessage": "Sei sicuro di voler eliminare la risorsa \"{{resourceName}}\"?",
+    "deleteResourceUndoWarning": "Questa azione non può essere annullata.",
+    "cannotDeleteResourceTitle": "Impossibile Eliminare Risorsa",
+    "resourceHasBookingsMessage": "La risorsa \"{{resourceName}}\" non può essere eliminata perché ha {{count}} prenotazioni attive.",
+    "resourceHasBookingsAction": "Per eliminare questa risorsa, devi prima cancellare o completare tutte le prenotazioni associate.",
+    "deleteResourceBtn": "Elimina Risorsa",
+    "errorCheckingResourceUsage": "Errore durante il controllo dell'utilizzo della risorsa. Riprova.",
+    "cannotDeleteResourceDBError": "Impossibile eliminare risorse: esistono prenotazioni associate (anche passate). Cancellare prima le prenotazioni.",
     "addLocation": "Aggiungi Sede",
     "editLocation": "Modifica Sede",
     "locationName": "Nome Sede",
@@ -205,6 +242,7 @@
     "description": "Descrizione",
     "scrivania": "Scrivania",
     "salaRiunioni": "Sala Riunioni",
+    "sala_riunioni": "Sala Riunioni",
     "available": "disponibili",
     "totalResources": "Risorse Totali",
     "noResourcesFound": "Nessuna risorsa definita per questa sede",
@@ -573,6 +611,9 @@
   },
   "common": {
     "loading": "Caricamento...",
+    "createdSuccessfully": "Creato con successo",
+    "deletedSuccessfully": "Eliminato con successo",
+    "savedSuccessfully": "Salvato con successo",
     "save": "Salva",
     "create": "Crea",
     "saving": "Salvataggio",
@@ -606,6 +647,7 @@
     "select": "Seleziona",
     "page": "Per pagina",
     "noResultsFound": "Nessun risultato",
+    "available": "disponibili",
     "showing": "Visualizzati",
     "startDate": "Data Inizio",
     "endDate": "Data Fine",
@@ -613,7 +655,15 @@
     "refresh": "Aggiorna",
     "previous": "Precedenti",
     "next": "Successive",
-    "account": "Account"
+    "account": "Account",
+    "today": "Oggi",
+    "yesterday": "Ieri",
+    "thisWeek": "Questa Settimana",
+    "thisMonth": "Questo Mese",
+    "thisYear": "Questo Anno",
+    "lastWeek": "Settimana Passata",
+    "lastMonth": "Mese Passato",
+    "lastYear": "Anno Passato"
   },
   "messages": {
     "signedInSuccessfully": "Accesso effettuato con successo",
@@ -813,7 +863,7 @@
     "gracePeriodDays": "Periodo di Grazia (Giorni)",
     "gracePeriodHelp": "Numero di giorni in cui i clienti possono continuare a usare il servizio dopo la scadenza",
     "isRenewable": "Il servizio è rinnovabile",
-    "renewableHelp": "Permetti ai clienti di rinnovare questo servizio quando scade",
+    "isRenewableHelp": "Permetti ai clienti di rinnovare questo servizio quando scade",
     "autoRenew": "Rinnovo automatico",
     "autoRenewHelp": "Rinnova automaticamente questo servizio a meno che il cliente non rinunci",
     "freeTrialNote": "Prova Gratuita",
@@ -841,13 +891,15 @@
     "halfDay": "Mezza Giornata",
     "oneDay": "1 Giorno",
     "daysCount": "{{count}} Giorni",
-    "privateService": "Servizio Privato",
-    "privateServiceHelp": "I Servizi Privati sono visibili solo ai partner e non possono essere selezionati dai clienti ",
     "dayPass": "Giornaliero",
     "dayPassInfo": "Servizi Giornalieri",
     "dayPassDescription": "accesso illimitato per una giornata con prenotazione anticipata",
     "dayPassExample": "Esempio: Day pass scrivania, accesso giornaliero sala riunioni",
     "dayPasses": "Giornalieri",
+    "createDescription": "Crea una nuova offerta per i tuoi clienti",
+    "editDescription": "Modifica i dettagli del servizio esistente",
+    "privateService": "Servizio Privato",
+    "privateServiceHelp": "Questo servizio non sarà visibile al pubblico",
     "affectedContracts": "Contratti Coinvolti"
   },
   "reservations": {
@@ -856,6 +908,7 @@
     "reservationDate": "Data Prenotazione",
     "duration": "Durata",
     "fullDay": "Giornata Intera",
+    "noResource": "Nessuna risorsa assegnata",
     "halfDay": "Mezza Giornata",
     "morning": "Mattino",
     "afternoon": "Pomeriggio",
@@ -1050,6 +1103,8 @@
     "maxEntries": "Ingressi Massimi",
     "entries": "ingressi",
     "resourceType": "Tipo Risorsa",
+    "specificResource": "Risorsa Specifica",
+    "selectResource": "Seleziona Risorsa",
     "confirmArchive": "Conferma Archiviazione",
     "archiveContract": "Archivia Contratto",
     "archiveContractWarning": "Questo archivierà il contratto e lo sposterà nella sezione contratti archiviati. Il contratto potrà essere ripristinato in seguito se necessario.",
