V 0.950 Calendar feed bug fixes

--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -215,7 +215,40 @@
     "location": "Sede",
     "quantity": "Quantità",
     "editResource": "Modifica Risorsa",
-    "description": "Descrizione"
+    "description": "Descrizione",
+    "calendarSubscription": "Sottoscrizione Calendario",
+    "calendarSubscriptionTitle": "Sottoscrizione Calendario",
+    "calendarSubscriptionDescription": "Sincronizza le tue prenotazioni con Google Calendar, Outlook o Apple Calendar",
+    "calendarSubscriptionPartnerDescription": "Sincronizza tutte le prenotazioni dei clienti con il tuo calendario",
+    "calendarSubscriptionCustomerDescription": "Sincronizza le tue prenotazioni personali con il tuo calendario",
+    "subscriptionUrl": "URL Sottoscrizione",
+    "copyUrl": "Copia URL",
+    "urlCopied": "URL copiato negli appunti!",
+    "regenerateToken": "Rigenera Token",
+    "regenerating": "Rigenerazione...",
+    "tokenRegenerated": "Token rigenerato con successo!",
+    "regenerateTokenWarning": "⚠️ Rigenerare il token invaliderà l'URL di sottoscrizione corrente. Dovrai ri-sottoscriverti nelle tue applicazioni calendario.",
+    "howToSubscribe": "Come Sottoscriversi:",
+    "googleCalendarInstructions": "Google Calendar",
+    "appleCalendarInstructions": "Apple Calendar",
+    "outlookInstructions": "Outlook",
+    "calendarInstructionsStep1Google": "Apri Google Calendar",
+    "calendarInstructionsStep2Google": "Clicca '+' accanto a 'Altri calendari'",
+    "calendarInstructionsStep3Google": "Seleziona 'Da URL'",
+    "calendarInstructionsStep4Google": "Incolla l'URL di sottoscrizione sopra",
+    "calendarInstructionsStep5Google": "Clicca 'Aggiungi calendario'",
+    "calendarInstructionsStep1Apple": "Apri l'app Calendario",
+    "calendarInstructionsStep2Apple": "File → Nuova Sottoscrizione Calendario",
+    "calendarInstructionsStep3Apple": "Incolla l'URL di sottoscrizione",
+    "calendarInstructionsStep4Apple": "Clicca 'Sottoscrivi'",
+    "calendarInstructionsStep1Outlook": "Apri Outlook Calendar",
+    "calendarInstructionsStep2Outlook": "Aggiungi Calendario → Da Internet",
+    "calendarInstructionsStep3Outlook": "Incolla l'URL di sottoscrizione",
+    "calendarInstructionsStep4Outlook": "Clicca 'OK'",
+    "loadingCalendarSubscription": "Caricamento sottoscrizione calendario...",
+    "errorLoadingCalendarToken": "Errore nel caricamento del token calendario. Riprova.",
+    "errorRegeneratingToken": "Errore nella rigenerazione del token. Riprova.",
+    "errorCopyingUrl": "Errore nella copia dell'URL. Copia manualmente."
   },
   "locations": {
     "deleteResourceConfirmMessage": "Sei sicuro di voler eliminare la risorsa \"{{resourceName}}\"?",
@@ -228,6 +261,9 @@
     "cannotDeleteResourceDBError": "Impossibile eliminare risorse: esistono prenotazioni associate (anche passate). Cancellare prima le prenotazioni.",
     "addLocation": "Aggiungi Sede",
     "editLocation": "Modifica Sede",
+    "addLocationDescription": "Aggiungi una nuova sede con tutte le informazioni necessarie",
+    "editLocationDescription": "Modifica i dettagli della sede",
+    "resourceDefinitionNote": "Ogni risorsa deve essere definita singolarmente per essere gestita in modo singolo",
     "locationName": "Nome Sede",
     "locationsFor": "Sedi per",
     "noLocationsFound": "Nessuna sede trovata.",
@@ -267,10 +303,10 @@
     "useDescriptiveNames": "Usa nomi descrittivi per una facile identificazione",
     "addDescriptionsForSpecial": "Aggiungi descrizioni per requisiti speciali",
     "setAccurateQuantities": "Imposta quantità accurate per una migliore prenotazione",
-    "hotDeskExample": "Area Scrivanie Condivise A (6 scrivanie)",
+    "hotDeskExample": "Area Scrivanie Condivise A",
     "privateOfficeExample": "Ufficio Privato 201",
     "standingDeskExample": "Zona Scrivanie in Piedi",
-    "conferenceRoomExample": "Sala Conferenze Alpha (12 persone)",
+    "conferenceRoomExample": "Sala Conferenze Alpha",
     "phoneBoothExample": "Cabina Telefonica 1",
     "trainingRoomExample": "Sala Formazione B",
     "images": "Immagini",
