V 0.960 Booking contracts bug fixes

--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -957,6 +957,10 @@
     "resourceNotAvailable": "Non Disponibile",
     "checkingAvailability": "Controllo disponibilità",
     "bookingConfirmed": "Prenotazione confermata con successo",
+    "occupiedBySubscription": "Risorsa occupata da un abbonamento attivo",
+    "fullyBooked": "Risorsa completamente prenotata per questa data",
+    "occupiedForFullDay": "Risorsa prenotata per l'intera giornata",
+    "slotFullyBooked": "La fascia oraria {{slot}} è già occupata",
     "confirmReservation": "Conferma Prenotazione",
     "bookingDetails": "Dettagli Prenotazione",
     "contractDetails": "Dettagli Contratto",
