V 0.970 User deletion bug fix

--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -10,7 +10,7 @@
     "partnerInfo": "Info Partner",
     "teamMembers": "Membri del Team",
     "myBookings": "Prenotazioni",
-    "ganttBookings": "Vista Gantt",
+    "ganttBookings": "Gantt",
     "partnerMember": "Membro Partner",
     "systemAdmin": "Amministratore di Sistema",
     "partnerAdmin": "Amministratore Partner",
@@ -421,6 +421,7 @@
     "email": "Email",
     "password": "Password",
     "confirmPassword": "Conferma Password",
+    "passwordRequirements": "La password deve contenere almeno 8 caratteri, una lettera maiuscola, una minuscola e un simbolo",
     "firstName": "Nome",
     "lastName": "Cognome",
     "role": "Ruolo",
@@ -473,6 +474,7 @@
   "roles": {
     "superadmin": "Super Amministratore",
     "admin": "Amministratore",
+    "partner": "Partner",
     "user": "Utente"
   },
   "dashboard": {
@@ -863,6 +865,9 @@
     "status": "Stato",
     "actions": "Azioni",
     "available": "disponibili",
+    "all": "Tutte le",
+    "allResourcesOf": "Tutte le risorse del tipo",
+    "totalCapacity": "Capacità Totale",
     "lowStock": "Scorte Basse",
     "alertThreshold": "Soglia Avviso",
     "totalServices": "Totale Servizi",
@@ -909,7 +914,7 @@
     "locationAndResource": "Sede e Risorsa",
     "resource": "Risorsa",
     "selectLocationFirst": "Seleziona prima una sede",
-    "selectResource": "Seleziona una risorsa",
+    "selectResource": "Seleziona una risorsa o una categoria",
     "noResourcesAvailable": "Nessuna risorsa disponibile per questa sede",
     "availableQuantity": "Quantità disponibile",
     "serviceInfo": "Info Servizi",
@@ -966,6 +971,7 @@
     "bookingDetails": "Dettagli Prenotazione",
     "contractDetails": "Dettagli Contratto",
     "reservationDetails": "Dettagli Prenotazione",
+    "confirmDeleteMessage": "Sei sicuro di voler eliminare questa prenotazione?",
     "bookingSummary": "Riepilogo Prenotazione",
     "dateLabel": "Data",
     "durationLabel": "Durata",
@@ -998,6 +1004,8 @@
     "insufficientEntries": "Ingressi rimanenti insufficienti nel pacchetto",
     "dateOutsideContract": "La data di prenotazione deve essere nel periodo del contratto",
     "resourceNotAvailableError": "Risorsa non disponibile per data e ora selezionate",
+    "insufficientEntriesError": "Ingresso non possibile: ingressi insufficienti nel pacchetto",
+    "reservationDateRangeError": "La data di prenotazione deve essere entro il periodo del contratto",
     "errorCreatingReservation": "Errore nella creazione della prenotazione",
     "availablePeriod": "Periodo disponibile",
     "selectDuration": "Seleziona durata",
@@ -1028,6 +1036,8 @@
     "managePartnerContracts": "Gestisci i tuoi contratti",
     "createContract": "Crea Contratto",
     "createFirstContract": "Crea Primo Contratto",
+    "actionNotAllowed": "Azione non consentita",
+    "statusRestrictionMessage": "Il tuo profilo non è ancora attivo. Non puoi creare contratti finché non sarai attivato dal partner.",
     "viewContract": "Visualizza Contratto",
     "editContract": "Modifica Contratto",
     "contract": "Contratto",
@@ -1260,6 +1270,11 @@
     "week": "Settimana",
     "day": "Giorno",
     "today": "Oggi",
+    "tomorrow": "Domani",
+    "noBookingsThisMonth": "Nessuna prenotazione questo mese",
+    "selectDifferentMonth": "Seleziona un mese diverso per vedere le prenotazioni",
+    "previousMonth": "Mese precedente",
+    "nextMonth": "Mese successivo",
     "filters": "Filtri",
     "customer": "Cliente",
     "allCustomers": "Tutti i Clienti",
@@ -1304,12 +1319,17 @@
     "selectACustomer": "Seleziona un cliente",
     "bookingFor": "Prenota per",
     "changeCustomer": "Cambia cliente",
+    "noAvailablePackages": "Nessun pacchetto disponibile per questo cliente",
     "locationClosed": "Sede Chiusa",
     "resourcesClosed": "risorse chiuse",
     "locationClosedToday": "Sede Chiusa Oggi",
     "partialClosureToday": "Chiusura Parziale Oggi",
     "resourcesAffected": "risorse interessate",
     "bookingDetails": "Dettagli Prenotazione",
+    "confirmed": "Confermata",
+    "pending": "In Attesa",
+    "cancelled": "Annullata",
+    "completed": "Completata",
     "serviceInformation": "Informazioni Servizio",
     "serviceName": "Nome Servizio",
     "serviceType": "Tipo Servizio",
