--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1997,7 +1997,9 @@
     "expiryReminder": "Expiry Reminder",
     "expiryReminderDescription": "Sent to remind customers about upcoming expirations (contracts, payments, etc.)",
     "contractCreation": "Contract Creation",
-    "contractCreationDescription": "Sent to customers when a new contract is created"
+    "contractCreationDescription": "Sent to customers when a new contract is created",
+    "customerBookingDeleted": "Booking Cancelled",
+    "customerBookingDeletedDescription": "Sent to customers when a booking is cancelled by the partner"
   },
   "customersDiscountCodes": {
     "title": "Customer Discount Codes",
