V 0.980 Bug Fixes Improvements

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,6 +63,7 @@
     "expiring": "Expiring",
     "toberenewed": "To be renewed",
     "inactive": "Inactive",
+    "notactive": "Inactive",
     "address": "Address",
     "zip": "ZIP Code",
     "city": "City",
@@ -588,6 +589,20 @@
     "export": "Export",
     "createdAt": "Created",
     "optional": "optional",
+    "months": {
+      "january": "January",
+      "february": "February",
+      "march": "March",
+      "april": "April",
+      "may": "May",
+      "june": "June",
+      "july": "July",
+      "august": "August",
+      "september": "September",
+      "october": "October",
+      "november": "November",
+      "december": "December"
+    },
     "confirmDelete": "Confirm Delete",
     "updating": "Updating...",
     "yes": "Yes",
@@ -622,6 +637,7 @@
     "accountCreatedSuccessfully": "Account created successfully! Please check your email to verify your account.",
     "passwordResetEmailSent": "Password reset email sent! Check your inbox.",
     "passwordsDoNotMatch": "Passwords do not match",
+    "passwordRequirementsNotMet": "Password does not meet security requirements",
     "registrationCompletePleaseVerify": "Registration complete! Please check your email to verify your account.",
     "errorSigningOut": "Error signing out",
     "errorLoadingPartners": "Error loading partners",
@@ -689,7 +705,7 @@
     "someImagesFailedToUpload": "{count} images failed to upload",
     "errorUploadingImages": "Error uploading images",
     "invalidEmailFormat": "Invalid email format",
-    "passwordTooShort": "Password must be at least 6 characters long",
+    "passwordTooShort": "Password must be at least 8 characters long",
     "passwordResetSuccessfully": "Password reset successfully",
     "errorResettingPassword": "Error resetting password",
     "invalidResetLink": "Invalid or expired reset link",
