--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -64,6 +64,7 @@
     "expiring": "Scaduto",
     "toberenewed": "Da rinnovare",
     "inactive": "Non attivo",
+    "notactive": "Non attivo",
     "address": "Indirizzo",
     "zip": "CAP",
     "city": "Città",
@@ -421,7 +422,7 @@
     "email": "Email",
     "password": "Password",
     "confirmPassword": "Conferma Password",
-    "passwordRequirements": "La password deve contenere almeno 8 caratteri, una lettera maiuscola, una minuscola e un simbolo",
+    "passwordRequirements": "La password deve contenere almeno 8 caratteri, una lettera maiuscola, una minuscola, un numero e un simbolo",
     "firstName": "Nome",
     "lastName": "Cognome",
     "role": "Ruolo",
@@ -659,6 +660,20 @@
     "creating": "Creazione",
     "cancel": "Annulla",
     "delete": "Elimina",
+    "months": {
+      "january": "Gennaio",
+      "february": "Febbraio",
+      "march": "Marzo",
+      "april": "Aprile",
+      "may": "Maggio",
+      "june": "Giugno",
+      "july": "Luglio",
+      "august": "Agosto",
+      "september": "Settembre",
+      "october": "Ottobre",
+      "november": "Novembre",
+      "december": "Dicembre"
+    },
     "edit": "Modifica",
     "close": "Chiudi",
     "closeWindow": "Chiudi Finestra",
@@ -710,6 +725,7 @@
     "accountCreatedSuccessfully": "Account creato con successo! Controlla la tua email per verificare il tuo account.",
     "passwordResetEmailSent": "Email di reimpostazione password inviata! Controlla la tua casella di posta.",
     "passwordsDoNotMatch": "Le password non corrispondono",
+    "passwordRequirementsNotMet": "La password non soddisfa i requisiti di sicurezza",
     "registrationCompletePleaseVerify": "Registrazione completata! Controlla la tua email per verificare il tuo account.",
     "errorSigningOut": "Errore durante il logout",
     "errorLoadingPartners": "Errore nel caricamento dei partner",
@@ -779,7 +795,7 @@
     "someImagesFailedToUpload": "{count} immagini non sono riuscite a caricarsi",
     "errorUploadingImages": "Errore nel caricamento delle immagini",
     "invalidEmailFormat": "Formato email non valido",
-    "passwordTooShort": "La password deve contenere almeno 6 caratteri",
+    "passwordTooShort": "La password deve contenere almeno 8 caratteri",
     "passwordResetSuccessfully": "Password reimpostata con successo",
     "errorResettingPassword": "Errore nel reimpostare la password",
     "invalidResetLink": "Link di reset non valido o scaduto",
